--- a/index.html
+++ b/index.html
@@ -388,12 +388,15 @@
                 font-size: 1.5rem;
             }
             
-            .damage-photo {
-                width: 100px;
-                height: 75px;
-                top: 20px;
-                right: 20px;
-            }
+          .days-photo-container {
+    flex-direction: column;
+    gap: 20px;
+}
+
+.damage-photo {
+    width: 140px;
+    height: 105px;
+}
             
             .amount-tragic {
                 font-size: 2rem;
