--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            padding: 40px;
+            padding: 40px 40px 50px 40px;
             box-shadow: 0 20px 40px rgba(0,0,0,0.5);
             margin: 0 auto;
         }
@@ -492,7 +492,7 @@
             font-size: 1.5rem;
             color: #fff;
             font-weight: 700;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
             text-transform: uppercase;
         }
 
@@ -500,6 +500,9 @@
             font-size: 1.1rem;
             color: #FFD93D;
             font-weight: 700;
+            margin-top: 15px;
+    margin-bottom: 10px;
+    line-height: 1.2;
         }
     </style>
 </head>
