--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                 <button class="share-btn facebook" onclick="shareToFacebook()">
                     <span>📘</span> Post on Facebook
                 </button>
-                <button class="share-btn linkedin" onclick="()">
+                <button class="share-btn linkedin" onclick="shareToLinkedIn()">
                     <span>💼</span> Post on LinkedIn
                 </button>
                 <button class="share-btn whatsapp" onclick="shareToWhatsApp()">
