--- a/index.html
+++ b/index.html
@@ -808,6 +808,7 @@
                             <option value="12">December</option>
                         </select>
                     <div class="form-item">
+                        </div>
                         <label for="submission-year">Year of Damage</label>
                         <select id="submission-year" required>
                             <option value="">Select Year</option>
