--- a/index.html
+++ b/index.html
@@ -807,6 +807,7 @@
                             <option value="11">November</option>
                             <option value="12">December</option>
                         </select>
+                         </div>
                     <div class="form-item">
                         </div>
                         <label for="submission-year">Year of Damage</label>
