--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     border-radius: 15px;
     box-shadow: 0 5px 20px rgba(0,0,0,0.1);
     margin-bottom: var(--spacing-lg);
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .form-section h2 {
