--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 .content-section {
     max-width: 1000px;
     margin: 0 auto;
-    padding: 40px 20px;
+    padding: 30px 20px;
 }
         
         .container {
@@ -636,9 +636,7 @@
 
         /* Story Section Styles */
 .story-section {
-    max-width: 1000px;
-    margin: 60px auto;
-    padding: 0 20px;
+    margin: 0;
 }
 
 .story-card {
