--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 
         /* Story Section Styles */
 .story-section {
-    margin: 0;
+    margin: 0;margin-bottom: var(--spacing-lg);
 }
 
 .story-card {
