--- a/index.html
+++ b/index.html
@@ -784,8 +784,8 @@
     <div class="content-section">
 <!-- Hero Section -->
 <div class="header" id="story">
-    <h1>Still Waiting</h1>
-    <p>Document your experience. Share your story. Get heard.</p>
+    <h1>Smartwings: 620 Days, €200, Zero Response</h1>
+    <p>Your claim deserves an answer. Create accountability.</p>
 </div>
 <!-- Personal Story Section -->
 <div class="story-section">
