--- a/index.html
+++ b/index.html
@@ -618,11 +618,17 @@
         }
 /* Navigation Styles */
 .nav-bar {
-    background: #2c3e50;
-    color: white;
+    background: white;
+    border-bottom: 1px solid var(--border);
     padding: 10px 0;
 }
 
+.nav-container .logo {
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: var(--primary-red);
+}
+        
 .nav-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -640,11 +646,16 @@
 .nav-links a {
     color: white;
     text-decoration: none;
-    transition: opacity 0.3s;
+    padding: 8px 16px;
+    border-radius: 8px;
+    background: var(--primary-red);
+    font-weight: 600;
+    transition: all 0.3s;
 }
 
 .nav-links a:hover {
-    opacity: 0.7;
+    background: #c02833;
+    transform: translateY(-1px);
 }
 
         /* Story Section Styles */
