--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
     font-weight: 600;
     cursor: pointer;
     transition: all 0.3s ease;
-    display: inline-block;
+    display: block;               /* Changed from inline-block to block */
     text-decoration: none;
+    margin: 20px auto;            /* Added this line */
+    width: max-content;           /* Added this line */
 }
 
 .btn:hover {
@@ -839,7 +841,7 @@
     font-size: 1rem;
 }    
   .hero-simple {
-    padding: 50px 20px;
+    padding: 35px 20px;
     background: white;
     text-align: center;
 }
@@ -850,15 +852,15 @@
 }
 
 .statement-line {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 500;
     color: #1d1d1f;
-    margin-bottom: 1.5rem;
-    line-height: 1.4;
+    margin-bottom: 1rem;
+    line-height: 1.3;
 }
 
 .separator {
-    margin: 3rem 0;
+    margin: 2rem 0;
     text-align: center;
     position: relative;
 }
@@ -871,7 +873,7 @@
 }
 
 .context {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
 }
 
 .context-text {
@@ -912,7 +914,7 @@
     <div class="nav-container">
         <div class="logo">Still Waiting</div>
         <div class="nav-links">
-            <a href="#story">My Story</a>
+           
             <a href="#create">Create Your Card</a>
             <a href="#privacy">Privacy</a>
         </div>
