--- a/index.html
+++ b/index.html
@@ -971,6 +971,20 @@
     padding-top: 20px;
     border-top: 1px solid #f0f0f0;
 }
+
+        .form-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-bottom: 25px;
+    align-items: start;
+}
+
+.form-item select,
+.form-item input {
+    height: 48px;
+    line-height: 1;
+}
         
     </style>
 </head>
@@ -1005,36 +1019,36 @@
     <div class="form-part" id="create">
         <h2>📝 Document Your Experience</h2>
         <form id="claim-form">
-            <div class="form-grid">
-                <div class="form-item">
-                    <label for="submission-month">When was your luggage damaged?</label>
-                    <select id="submission-month" required>
-                        <option value="">Select Month</option>
-                        <option value="1">January</option>
-                        <option value="2">February</option>
-                        <option value="3">March</option>
-                        <option value="4">April</option>
-                        <option value="5">May</option>
-                        <option value="6">June</option>
-                        <option value="7">July</option>
-                        <option value="8">August</option>
-                        <option value="9">September</option>
-                        <option value="10">October</option>
-                        <option value="11">November</option>
-                        <option value="12">December</option>
-                    </select>
-                </div>
-                <div class="form-item">
-                    <label for="submission-year">Year of Damage</label>
-                    <select id="submission-year" required>
-                        <option value="">Select Year</option>
-                    </select>
-                </div>
-                <div class="form-item">
-                    <label for="amount">Damage Value (€)</label>
-                    <input type="number" id="amount" required min="1" placeholder="e.g. 200">
-                </div>
-            </div>
+<div class="form-grid">
+    <div class="form-item">
+        <label for="submission-month">When did you submit your claim?</label>
+        <select id="submission-month" required>
+            <option value="">Select Month</option>
+            <option value="1">January</option>
+            <option value="2">February</option>
+            <option value="3">March</option>
+            <option value="4">April</option>
+            <option value="5">May</option>
+            <option value="6">June</option>
+            <option value="7">July</option>
+            <option value="8">August</option>
+            <option value="9">September</option>
+            <option value="10">October</option>
+            <option value="11">November</option>
+            <option value="12">December</option>
+        </select>
+    </div>
+    <div class="form-item">
+        <label for="submission-year">Year</label>
+        <select id="submission-year" required>
+            <option value="">Select Year</option>
+        </select>
+    </div>
+    <div class="form-item">
+        <label for="amount">Claim Amount (€)</label>
+        <input type="number" id="amount" required min="1" placeholder="e.g. 200">
+    </div>
+</div>
 <div class="upload-integrated">
     <div class="separator-light"></div>
     <p style="margin-bottom: 15px;"><strong>📸 Evidence photo</strong> <span style="color: #888; font-size: 0.9rem;">(optional)</span></p>
