--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
         <form id="claim-form">
 <div class="form-grid">
     <div class="form-item">
-        <label for="submission-month">Claim submission date?</label>
+        <label for="submission-month">Claim submission month</label>
         <select id="submission-month" required>
             <option value="">Select Month</option>
             <option value="1">January</option>
