--- a/index.html
+++ b/index.html
@@ -1393,7 +1393,12 @@
             <div style="background: #f8f9fa; padding: 15px; border-radius: 8px; margin-top: 20px; font-family: monospace; font-size: 0.9rem; line-height: 1.5;" id="share-message"></div>
         </div>
     </div>
+        <div class="privacy-inline">
+        <details class="privacy-compact">
+        </details>
+    </div>
     
+</div> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     
 </div>
