--- a/privacy.html
+++ b/privacy.html
@@ -279,7 +279,7 @@
         <div class="main-content">
             <div class="section">
                 <h2><span>👤</span> Who Made This</h2>
-                <p>I'm an individual who got tired of waiting 620+ days for a response from Smartwings. So I created this tool to help people like us document our experiences and raise awareness.</p>
+                <p>I'm an individual who got tired of waiting 620+ days for a response from Smartwings. So I created this tool to help people like me document experiences and raise awareness.</p>
                 <div class="author-badge">
                     <span>🤖</span>
                     <span>Built with help from Claude AI</span>
@@ -326,7 +326,7 @@
                 <h2><span>✨</span> What You Get</h2>
                 <ul class="rights-list">
                     <li>Complete control over your data</li>
-                    <li>Use with your existing claim ID</li>
+                    <li>Real claim ID stays with you only</li>
                     <li>Local processing - private by design</li>
                     <li>Zero sign-ups or passwords needed</li>
                     <li>Instant deletion when you close browser</li>
