--- a/index.html
+++ b/index.html
@@ -1138,18 +1138,18 @@
 <!-- Green Header Bar -->
 <!-- Green Header Bar (same width as containers) -->
 <div class="content-section">
-    <div class="header-bar">
-        <h1 class="header-title">SmartwingsWatch</h1>
-        <p class="header-subtitle">Making Smartwings claim delays visible</p>
-    </div>
     
     <!-- Story Context -->
-    <div class="story-context">
-        <p>Real passenger experience:</p>
-    </div>
+
 </div>
         <!-- Hero Section (your existing content) -->
 <section class="unified-container">
+     <div class="integrated-header">
+            <h1 class="site-title">SmartwingsWatch</h1>
+            <p class="site-tagline">Making Claim Delays Visible</p>
+            <div class="separator-line"></div>
+            <p class="story-summary">Day 620: Still waiting for €200 from Smartwings</p>
+        </div>
     <div class="story-part">
         <p class="statement-line">Smartwings damaged my luggage.</p>
         <p class="statement-line">I filed a claim for €200.</p>
