--- a/index.html
+++ b/index.html
@@ -1850,11 +1850,15 @@
 
 .claim-card-context .evidence-photo {
     width: 100%;
-    height: 180px;
+    height: 180px !important; /* Match exact height from other cards */
+    min-height: 180px !important;
+    max-height: 180px !important;
     border-radius: 12px;
     overflow: hidden;
     margin-bottom: 25px;
     background: #f1f5f9;
+    position: relative;
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1864,6 +1868,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center;
 }
 
 .claim-card-context .photo-placeholder {
@@ -1873,8 +1878,11 @@
 
 .claim-card-context .card-footer {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .claim-card-context .hashtags {
@@ -1985,10 +1993,10 @@
 
 .claim-card-context .evidence-photo {
     width: 100%;
-    height: 135px !important; /* Force exact height match */
-    min-height: 135px !important; /* Ensure minimum height */
-    max-height: 135px !important; /* Enforce maximum height */
-    border-radius: 15px;
+    height: 180px !important; /* Force exact height match */
+    min-height: 180px !important; /* Ensure minimum height */
+    max-height: 180px !important; /* Enforce maximum height */
+    border-radius: 12px;
     overflow: hidden;
     margin-bottom: 25px;
     background: #f1f5f9;
