--- a/index.html
+++ b/index.html
@@ -1276,15 +1276,15 @@
     margin-bottom: 30px;
     background: #f8fafc;
     border: 1px solid #e2e8f0;
-    min-height: 180px;
+    /*min-height: 180px;*/
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .claim-card-minimalist .evidence-photo img {
-    width: 100%;
-    height: auto;
+    /*width: 100%;
+    height: auto;*/
     display: block;
 }
 
@@ -1518,12 +1518,12 @@
     margin-bottom: 25px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     border: 2px solid #fde047;
-    min-height: 180px;
+    /*min-height: 180px;*/
 }
 
 .claim-card-impact .evidence-photo img {
-    width: 100%;
-    height: auto;
+    /*width: 100%;
+    height: auto;*/
     display: block;
 }
 
@@ -2041,6 +2041,50 @@
 .claim-card-impact .evidence-photo {
     min-height: 180px !important;
     height: 180px !important;
+}
+/* ========================================= */
+/* UNIFIED PHOTO SIZING - FINAL OVERRIDE */
+/* ========================================= */
+
+/* Photo container dimensions */
+.claim-card-minimalist .evidence-photo,
+.claim-card-impact .evidence-photo,
+.claim-card-context .evidence-photo {
+    width: 100%;
+    height: 180px;
+    min-height: 180px;
+    max-height: 180px;
+    border-radius: 12px;
+    overflow: hidden;
+    margin-bottom: 25px;
+    position: relative;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Image styling */
+.claim-card-minimalist .evidence-photo img,
+.claim-card-impact .evidence-photo img,
+.claim-card-context .evidence-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    display: block;
+}
+
+/* Placeholder styling */
+.claim-card-minimalist .photo-placeholder,
+.claim-card-impact .photo-placeholder,
+.claim-card-context .photo-placeholder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
         
     </style>
