--- a/index.html
+++ b/index.html
@@ -2064,15 +2064,18 @@
     align-items: center;
 }
 
-/* Image styling */
+/* Image styling - Updated to show full image */
 .claim-card-minimalist .evidence-photo img,
 .claim-card-impact .evidence-photo img,
 .claim-card-context .evidence-photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
     object-position: center;
     display: block;
+    margin: 0 auto;
 }
 
 /* Placeholder styling */
