--- a/index.html
+++ b/index.html
@@ -2043,10 +2043,10 @@
     height: 180px !important;
 }
 /* ========================================= */
-/* UNIFIED PHOTO SIZING - FINAL OVERRIDE */
+/* UNIFIED PHOTO SIZING - COMPLETE FIX */
 /* ========================================= */
 
-/* Photo container dimensions */
+/* Photo container dimensions - consistent height */
 .claim-card-minimalist .evidence-photo,
 .claim-card-impact .evidence-photo,
 .claim-card-context .evidence-photo {
@@ -2059,22 +2059,43 @@
     margin-bottom: 25px;
     position: relative;
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
+    display: block; /* Change to block for better image handling */
 }
 
-/* Image styling - Updated to show full image */
+/* Image container specific styles */
+#card-photo-container,
+#impact-photo-container,
+#context-photo-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+/* Image styling for proper display */
 .claim-card-minimalist .evidence-photo img,
 .claim-card-impact .evidence-photo img,
 .claim-card-context .evidence-photo img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover; /* Fill the container while maintaining aspect ratio */
     object-position: center;
-    background-color: rgba(0, 0, 0, 0.02);
-    max-width: none;
-    max-height: none;
+    display: block;
+}
+
+/* Evidence label styling */
+.evidence-label {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    padding: 5px 10px;
+    border-radius: 4px;
+    z-index: 5;
 }
 
 /* Placeholder styling */
@@ -2088,23 +2109,21 @@
     width: 100%;
     height: 100%;
 }
-    /* Preserve card-specific styling while ensuring proper image display */
+
+/* Card-specific styling preservation */
 .claim-card-minimalist .evidence-photo {
     background: #f8fafc;
     border: 1px solid #e2e8f0;
-    padding: 0;
 }
 
 .claim-card-impact .evidence-photo {
     border: 2px solid #fde047;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    padding: 0;
 }
 
 .claim-card-context .evidence-photo {
     background: #f1f5f9;
     border: 1px solid #e2e8f0;
-    padding: 0;
 }    
     </style>
 </head>
@@ -2361,6 +2380,10 @@
                 <div id="impact-photo-container" style="display: none;">
                     <img id="impact-photo" alt="Damaged luggage evidence">
                     <div class="evidence-label">EVIDENCE OF DAMAGE</div>
+                </div>
+                <div class="photo-placeholder" id="impact-placeholder">
+                    <div class="photo-placeholder-icon">📷</div>
+                    <div>Evidence Photo</div>
                 </div>
             </div>
             
@@ -3407,10 +3430,9 @@ function updateBothCards() {
 }
 
 /**
- * Update photos on both cards
+ * Update photos on all cards, ensuring proper display
  */
-
-  function updateAllCardPhotos() {
+function updateAllCardPhotos() {
     if (!currentPhoto) return;
     
     // Update minimalist card photo
@@ -3422,8 +3444,8 @@ function updateBothCards() {
         minimalistPhoto.src = currentPhoto;
         minimalistPhoto.onload = function() {
             minimalistContainer.style.display = 'block';
-            minimalistContainer.style.width = '100%'; // Ensure full width
-            minimalistContainer.style.height = '100%'; // Ensure full height
+            minimalistContainer.style.width = '100%';
+            minimalistContainer.style.height = '100%';
             if (minimalistPlaceholder) minimalistPlaceholder.style.display = 'none';
             minimalistPhoto.style.transform = `rotate(${currentRotation}deg)`;
             minimalistPhoto.style.filter = `brightness(${currentBrightness}%)`;
@@ -3438,8 +3460,8 @@ function updateBothCards() {
         impactPhoto.src = currentPhoto;
         impactPhoto.onload = function() {
             impactContainer.style.display = 'block';
-            impactContainer.style.width = '100%'; // Ensure full width
-            impactContainer.style.height = '100%'; // Ensure full height
+            impactContainer.style.width = '100%';
+            impactContainer.style.height = '100%';
             impactPhoto.style.transform = `rotate(${currentRotation}deg)`;
             impactPhoto.style.filter = `brightness(${currentBrightness}%)`;
         };
@@ -3454,8 +3476,8 @@ function updateBothCards() {
         contextPhoto.src = currentPhoto;
         contextPhoto.onload = function() {
             contextContainer.style.display = 'block';
-            contextContainer.style.width = '100%'; // Ensure full width
-            contextContainer.style.height = '100%'; // Ensure full height
+            contextContainer.style.width = '100%';
+            contextContainer.style.height = '100%';
             if (contextPlaceholder) contextPlaceholder.style.display = 'none';
             contextPhoto.style.transform = `rotate(${currentRotation}deg)`;
             contextPhoto.style.filter = `brightness(${currentBrightness}%)`;
