--- a/index.html
+++ b/index.html
@@ -1536,7 +1536,7 @@
     font-weight: 700;
     padding: 8px 16px;
     border-radius: 8px;
-    letter-spacing: 0.5px
+    letter-spacing: 0.5px;
     position: absolute;
     bottom: 10px;
     right: 10px;
@@ -2121,7 +2121,6 @@
         <!-- Card Header -->
         <div class="card-header">
             <div class="airline-name">SMARTWINGS</div>
-            <div class="claim-context">Luggage damage claim - ignored since <span id="minimalist-context-date"></span></div>
             <div class="time-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" width="24" height="24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
@@ -2201,7 +2200,6 @@
             <div class="card-header">
                 <div class="report-label">PASSENGER CLAIM IGNORED</div>
                 <div class="airline-name">SMARTWINGS</div>
-                <div class="claim-context">Luggage damage claim - ignored since <span id="impact-context-date"></span></div>
             </div>
             
             <!-- Damage Evidence Photo -->
@@ -2267,7 +2265,6 @@
     <div class="claim-card-context" id="context-card" style="display: none;">
         <div class="context-header">
             <div class="airline-name">SMARTWINGS</div>
-            <div class="claim-context">Luggage damage claim - ignored since <span id="context-context-date"></span></div>
             <div class="claim-days">
                 <span id="context-days-count">0</span> DAYS
                 <span class="waiting-label">WITHOUT RESPONSE</span>
